# cicd_python_aws_ecs

./: .checkov.baseline.json  .checkov.yaml  .checkovignore  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Makefile  OIDC_Thumbprint.sh  README.md  buildspec.yml  checkov-config.json  create_IAM_role.sh  create_OIDC_trust_policy.sh  main.tf  outputs.tf  providers.tf  pyproject.toml  terraform.tfvars  variables.tf  verify_setup.sh
.claude/: CLAUDE.md
.github/agents/: sr-devops-engineer.agent.md
.github/prompts/: sr-devops-operate.prompt.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  drift-detect.yml  operate-repo.yml  ops-alert-response.yml
docs/: ARCHITECTURE.md  CHECKOV.md  COMPLIANCE.md  OIDC_SETUP_GUIDE.md  RUNBOOK.md  TROUBLESHOOTING.md
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
k8s/base/: deployment.yaml  service.yaml  serviceaccount.yaml
modules/cicd/: main.tf  outputs.tf  variables.tf
modules/eks/: main.tf  outputs.tf  variables.tf
modules/lambda/: main.tf  outputs.tf  variables.tf
modules/rds/: main.tf  outputs.tf  variables.tf
modules/s3/: main.tf
modules/vpc/: variables.tf
scripts/: auto-rollback.sh  bootstrap-github-oidc-roles.sh  bootstrap.sh  checkov-scan.sh  checkov-summary.sh  generate-checkov-baseline.sh  generate-html-report.sh  publish-results.sh  smoke-test-eks.sh  smoke-test.sh  validate-iac.sh
scripts/aws-setup/: get-thumbprint.sh  setup-iam-roles.sh  setup-oidc-provider.sh  verify-oidc.sh
src/: .dockerignore  Dockerfile  entrypoint.sh
src/app/: main.py  (+2 more)
(+34 files in other folders)
