[tool.poetry]
name = "cicd-python-ecs"
version = "1.0.0"
description = "Python API deployed on AWS ECS Fargate"
authors = []
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
boto3 = "^1.34.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.4.4"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.10.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "N", "UP", "S", "B"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
src_paths = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/app/tests"]
asyncio_mode = "auto"
addopts = "--tb=short -v"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
